--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="highScore">0</div>
                 </div>
             </div>
-            <img class="invert" width="24" height="24" src="images/volume.png" alt="">
+            <!-- <img class="invert volume" width="24" height="24" src="images/volume.png" alt=""> -->
         </div>
 
          <div class="grid">
@@ -322,7 +322,7 @@
     </div>
     <div class="gameOver">
         <div class="gameOverBox">
-            <div class="gameOverHeading">Game Over</div>
+            <div class="gameOverHeading"><span>Game Over</span></div>
             <div class="scores">
                 <div class="foodScore">
                     <img src="images/apple.png" alt="">
